portfolio/styles/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');

#content {
    max-width: 1600px;
    margin: 0 auto;
    display: grid;
}

header {
    background-color: #264653;
    display: grid;
    grid-template-columns: 150px auto;
}

#Logo_Link img {
    width: 80px;
    padding-top: 5px;
}

nav {
    display: flex;
    justify-content: space-around;
    align-items: right;
    grid-column: 2 / -2;
}

nav a{
    text-align: center;
    color: antiquewhite;
    text-decoration: none;
    padding: 35px;
}

#home-web {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    margin-top: -100px;
}

#home-box::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    z-index: 1;
}

#home-box {
    grid-column: 1/4;
    grid-row: 1/3;
    z-index: -1;
    position: relative;
}

.button-box {
    text-align: center;
}

main section {
    text-align: center;
}

#background {
    height: 725px;
    background-color: #264653;
    grid-column: 1 / 11;
    grid-row: 4 / 9;
}

body {
    background-color: white;
    font-family: 'Roboto Slab', Arial, sans-serif;
    font-size: 22px;
    margin: 0;
    padding: 0;
}




footer {
    background-color: #264653;
    color: white;
    padding: 25px 50px;
    margin-top: 200px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}


h4 {
    color: #354f52;
}

footer a {
    color: white;
    text-decoration: none;
    font-size: 1.2em;
}

footer a:hover {
    color: #2A9D8F;
}

.icon {
    width: 80px;
    padding-top: 10px;
}

#hero-img {
    width: 100%;
}


h2 {
    margin: 0;
}

footer a img {
    width: 50px;
    height: 50px;
}


.card-img {
    border: 10px solid #84a98c;
    transition: transform .5s;
    box-shadow: 5px 5px 10px #6f7364;
}

main section img {
    box-sizing: border-box;
}



#home-img {
    width: 100%;
    z-index: 2;
}

#home-msg {
    color: white;
    grid-column: 2/3;
    grid-row: 1/3;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

#home-msg h4 {
    color: white;
  }

.home-title {
    text-align: center;
    color: white;
    font-family: 'Roboto Slab', Arial, sans-serif;
    font-size: 2em;
    margin-top: 70px;
}

.button-home-box {
    text-align: center;
    margin-top: 20px;
}

#recent-projects {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 20px;
    margin-top: 50px;
}

.website-box {
    text-align: center;
}

.article-img {
    width: 300%;
    max-width: 300px;
    height: 300px;
    transition: opacity 0.3s ease;
}

.article-img:hover {
    opacity: 0.8;
}

.box-title {
    margin-top: 10px;
    font-size: 1.5em;
    padding: 2px;
}

.website-summary {
    color: black;
    font-size: 0.9em;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 10px;
}
  
ul {
    list-style: none;
    padding: 0;
    margin: 0;
  }


  input,
  textarea {
    /* To make sure that all text fields have the same font settings
       By default, textareas have a monospace font */
    font: 1em sans-serif;
  
    /* Uniform text field size */
    width: 300px;
    box-sizing: border-box;
  
    /* Match form field borders */
    border: 1px solid #999;
  }
  
  input:focus,
  textarea:focus {
    /* Additional highlight for focused elements */
    border-color: #000;
  }
  
  textarea {
    /* Align multiline text fields with their labels */
    vertical-align: top;
  
    /* Provide space to type some text */
    height: 5em;
  }
  
  .button {
    /* Align buttons with the text fields */
    padding-left: 90px; /* same size as the label elements */

  }
  
  button {
    /* This extra margin represent roughly the same space as the space
       between the labels and their text fields */
    margin-left: 0.5em;
  }

#presentation {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
    margin-top: 50px;
    align-items: center;
}

.text-box {
    text-align: center;
}

.presentation-img {
    text-align: center;
}
.presentation-img {
    width: 800px;
    height: 600px;
    transition: opacity 0.3s ease;
}

.presentation-img:hover {
    opacity: 0.8;
}

.presentation-title {
    margin-top: 10px;
    font-size: 1.5em;
    padding: 2px;
}

.presentation-summary {
    color: black;
    font-size: 0.9em;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 10px;
}

.call-to-action {
    background-color: #E76F51;
    color: white;
    text-decoration: none;
    font-size: 18px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}

.call-to-action:hover {
    background-color: #F4A261;
    color: black;
}

.w3-row-padding {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, auto);
    gap: 30px;
  }

.w3-third img:hover {
    opacity: 0.6;
    transform: scale(1.1);
}

.w3-third img {
    border: 5px solid #264653;
}

.w3-container.w3-white h3 img {
    width: 40px;
    height: 40px;
    margin-left: 10px;
    vertical-align: middle;
    border: none;
}

* {
    box-sizing: border-box;
  }
  
  /* Style inputs */
  input[type=text], select, textarea {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
  }
  
  input[type=submit] {
    background-color: #264653;
    color: white;
    padding: 12px 20px;
    border: none;
    cursor: pointer;
  }
  
  input[type=submit]:hover {
    background-color: #2A9D8F;
  }
  
  /* Style the container/contact section */
  .container {
    border-radius: 5px;
    background-color: #f2f2f2;
    padding: 10px;
  }
  
  /* Create two columns that float next to eachother */
  .column {
    float: left;
    width: 50%;
    margin-top: 6px;
    padding: 20px;
  }
  
  /* Clear floats after the columns */
  .row:after {
    content: "";
    display: table;
    clear: both;
  }
  
#about-presentation {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
    margin-top: 50px;
    align-items: center;
}

.about-presentation-img {
    text-align: center;
}

.about-presentation-img {
    width: 800px;
    height: 600px;
    transition: opacity 0.3s ease;
}

.about-presentation-img:hover {
    opacity: 0.8;
}

.about-presentation-title {
    margin-top: 10px;
    font-size: 1.5em;
    padding: 2px;
}

.about-presentation-summary {
    color: black;
    font-size: 0.9em;
    justify-content: center;
    align-items: center;
    text-align: left;
    padding: 10px;
}

.button-about-box {
    text-align: left;
    margin-top: 20px;
}

.call-to-action-about {
    background-color: #2A9D8F;
    color: white;
    text-decoration: none;
    font-size: 18px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}

.call-to-action-about:hover {
    background-color: #F4A261;
    color: black;
}

.button-about-box2 {
    text-align: left;
    margin-top: 20px;
}

.call-to-action-about2 {
    background-color: gray;
    color: white;
    text-decoration: none;
    font-size: 18px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}

.call-to-action-about2:hover {
    background-color: #F4A261;
    color: black;
}

#skills-presentation {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
    margin-top: 50px;
    align-items: center;
}

.skills-presentation-img {
    text-align: center;
}

.skills-presentation-img {
    width: 800px;
    height: 600px;
    transition: opacity 0.3s ease;
}

.skills-presentation-img:hover {
    opacity: 0.8;
}

.skills-presentation-summary {
    color: black;
    font-size: 0.9em;
    justify-content: center;
    align-items: center;
    text-align: right;
    padding: 10px;
}

.skills-presentation-img {
    max-width: 100%;
    height: 300px;
    width: 600px;
}
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
  @media screen and (max-width: 600px) {
    .column, input[type=submit] {
      width: 100%;
      margin-top: 0;
    }
  }

